# Openmw_Config

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: parsing.rs
src/: config.rs  lib.rs  lua.rs  platform_paths.rs
src/config/: directorysetting.rs  encodingsetting.rs  error.rs  filesetting.rs  gamesetting.rs  genericsetting.rs  singletonsetting.rs  strings.rs  util.rs
tests/: integration_chain_replace.rs  integration_env_resolution.rs  integration_global_precedence.rs  integration_lua_bindings.rs  integration_manual_chain_dump.rs  integration_manual_chain_mirror.rs  integration_roundtrip.rs  integration_save_boundaries.rs  integration_windows_paths.rs  proptest_fallback.rs  proptest_indexes.rs  proptest_paths.rs  proptest_replace.rs  proptest_roundtrip.rs  proptest_save_and_chain.rs  proptest_unknown_and_comments.rs
tests/common/: mod.rs
