[package]
name = "openmw-config"
description = "A library for interacting with the Openmw Configuration system."
version = "1.0.0"
authors = ["Dave Corley (S3kshun8) <corleycomputerrepair@protonmail.ch>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/DreamWeave-MP/Openmw_Config"
readme = "README.md"
keywords = ["openmw", "config", "parsing", "gamedev"]
categories = ["config", "game-engines", "parsing"]
edition = "2024"
rust-version = "1.88"

[dependencies]
shellexpand = "3.1.1"
mlua = { version = "0.10.5", optional = true, default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell"] }

[features]
default = []
lua = ["dep:mlua", "mlua/luajit52", "mlua/vendored"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.6.0"

[[bench]]
name = "parsing"
harness = false
